01-eks-gatekeeper/policies/ct-disallow-hostpath.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowhostpath
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowHostPath
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowhostpath

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          volume := input.review.object.spec.volumes[_]
          volume.hostPath
          msg := sprintf("HostPath volumes are not allowed: %v", [volume.name])
        }
